--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.app.blood_finder">
+    package="com.app.flutter_base_project">
    <application
-        android:label="blood_finder"
+        android:label="flutter_base_project"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
