--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.app.flutter_base_project">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    
    <application
         android:label="flutter_base_project"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data
+                android:name="com.google.android.gms.ads.APPLICATION_ID"
+                android:value="ca-app-pub-9260672419726699~2662994960"/>
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
