--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   image_picker: 0.7.0
   path_provider: 2.0.1
   camera: 0.8.0
+  google_mobile_ads: 0.13.0
+  # needed if app is tracking or using 3rd party ads like admob in ios only
+  app_tracking_transparency: 2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
